--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,22 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
+.icons-footer-list {
+	width:20%;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+.icons-footer {
+	display: flex;
+	justify-content: center;
+}
+
+.dimmer {
+	filter:brightness(70%);
+	width: 100%;
+	height: 100%;
+}
 .first-flex {
 	display: flex;
 	justify-content: space-between;
@@ -38,6 +54,14 @@
 .icons li {
 	font-size: 100px;
 	margin-top: 50px;
+}
+.resume-link {
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	flex-direction: column;
 }
 
 .redux-logo{
@@ -2051,7 +2075,11 @@
 	#header {
 		position: relative;
 		margin: 0;
-		background-image: url("images/overlay.png"), url("../../images/header.jpg");
+		background:linear-gradient(
+      rgba(0, 0, 0, 0.7),
+      rgba(0, 0, 0, 0.7)
+    ), url("../../images/nyc2.jpg");
+
 		background-size: auto, cover;
 		background-position: top left, center center;
 		background-repeat: repeat, no-repeat;
