--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,22 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
+
+.img-links i {
+	font-size: 35px;
+	vertical-align: 2px;
+	margin-left: 2px;
+}
+
+.img-links-footer i{
+	font-size: 20px;
+	vertical-align: 2px;
+	margin-left: 2px;
+}
+
+.img-links{
+	font-size: 12px;
+}
 .icons-footer-list {
 	width:20%;
 	display: flex;
@@ -49,6 +65,10 @@
 }
 .right-first{
 	margin-left: 20px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .icons li {
@@ -1435,7 +1455,10 @@
 	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 		color: inherit;
 		text-decoration: none;
+
 	}
+
+
 
 	.dark h1, .dark h2, .dark h3, .dark h4, .dark h5, .dark h6 {
 		color: #fff;
@@ -2089,7 +2112,7 @@
 	}
 
 		#header header h1 {
-			font-size: 2.25em;
+			font-size: 3.25em;
 			line-height: 1.25em;
 			margin-bottom: 0;
 		}
