fixed font size for linkedin icon

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,10 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+#linkedin-prof{
+	font-size: 27px;
+}
+
 .img-links i {
 	font-size: 35px;
 	vertical-align: 2px;
