added images for projects

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,12 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+img {
+height: auto;
+width: 400px;
+
+}
+
 #linkedin-prof{
 	font-size: 27px;
 }
